<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">TipsProject</string>
    <!--<string name="buy_kindle">我想买%s台<xliff:g id="Kindle">Kindle</xliff:g></string>-->

    <plurals name="buy_kindle">
        <!--<item quantity="zero">我不想买<xliff:g id="Kindle">KINDLE</xliff:g>.</item>-->
        <item quantity="one">我想买一台<xliff:g id="Kindle">KINDLE</xliff:g>.</item>
        <item quantity="other">我想买%d台<xliff:g id="Kindle">Kindle</xliff:g>.</item>
    </plurals>
    <string name="hello_word">Hello</string>

    <string name="much">Adding a Toolbar directly to an AppBarLayout gives you access to the enterAlwaysCollapsed and exitUntilCollapsed scroll flags, but not the detailed control on how different elements react to collapsing. For that, you can use CollapsingToolbarLayout:
        \n\nThis setup uses CollapsingToolbarLayout’s app:layout_collapseMode="pin" to ensure that the Toolbar itself remains pinned to the top of the screen while the view collapses. Even better, when you use CollapsingToolbarLayout and Toolbar together,
        the title will automatically appear larger when the layout is fully visible, then transition to its default size as it is collapsed. Note that in those cases, you should call setTitle() on the CollapsingToolbarLayout, rather than on the Toolbar itself.</string>
    <string name="show_loader">show loader</string>
    <string name="switch_label">Switch Status</string>
    <string name="pending_one_shot">One Shot</string>
    <string name="pending_no_create">No Create</string>
    <string name="cancel_current">Cancel Current</string>
    <string name="update_current">Update Current</string>
    <string name="pending_immutable">Immutable</string>
    <string name="label_notification">Notification</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="request_stk">Request Stk</string>
    <string name="label_open_stk">Open STK</string>
    <string name="waiting">waiting…</string>
    <string name="label_fragment_one">Fragment One</string>
    <string name="label_fragment_two">Fragment Two</string>
    <string name="label_fragment_three">Fragment Three</string>
    <string name="label_request_loc">Request Location</string>
    <string name="label_load_dialog">Load Dialog</string>
    <string name="label_dialog_act">Dialog Activity</string>
    <string name="label_confirm">Confirm</string>
    <string name="xm">xm</string>

    <string name="duration">%s min</string>
    <string name="lifecycle">Lifecycle</string>
    <string name="txt_double_click">Double Click</string>
    <string name="txt_query">Query</string>
    <string name="txt_insert">Insert</string>
    <string name="txt_update">update</string>
    <string name="txt_delete">Delete</string>
</resources>
