<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:onClick="showOneShot"
        android:text="@string/pending_one_shot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="showNoCreate"
        android:text="@string/pending_no_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="showCancelCurrent"
        android:text="@string/cancel_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="showUpdateCurrent"
        android:text="@string/update_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="showImmutable"
        android:text="@string/pending_immutable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>