<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/label_frag_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_fragment_one" />

        <TextView
            android:id="@+id/label_frag_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_fragment_two" />

        <TextView
            android:id="@+id/label_frag_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_fragment_three" />

        <TextView
            android:id="@+id/label_frag_lifecycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lifecycle" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flay_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>